--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,13 +65,13 @@ footer {
     bottom: 0; 
     left: 0;
     right: 0; 
+    z-index:3;
 }
 
 footer p {
     margin: 0;
     font-weight: bold;
 }
-
 .product:hover {
     transform: scale(1.05);
     transition: transform 0.3s ease;
