--- a/assets/css/admin_index.css
+++ b/assets/css/admin_index.css
@@ -1,135 +1,138 @@
 .sidebar {
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 250px;
-    background-color: #e9f1f5;
-    padding: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 250px;
+  background-color: #e9f1f5;
+  padding: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 .content {
-    margin-left: 260px;
-    padding: 20px;
+  margin-left: 260px;
+  padding: 20px;
 }
-#userInfo, #managementContent {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5); 
-    padding: 20px;
-    border-radius: 10px;
+#userInfo,#managementContent {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  border-radius: 10px;
 }
 .btnXoa {
-    width: 100px;
-    font-weight: 400;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    color: #fff; 
-    background-color: #dc3545; 
-    border-color: #dc3545; 
+  width: 100px;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  color: #fff;
+  background-color: #dc3545;
+  border-color: #dc3545;
 }
 .btnXoa:hover {
-    background-color: #c82333; 
-    border-color: #bd2130; 
+  background-color: #c82333;
+  border-color: #bd2130;
 }
-.btnXoa:focus, .btnXoa.focus {
-    box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5); 
+.btnXoa:focus,
+.btnXoa.focus {
+  box-shadow: 0 0 0 0.2rem rgba(225, 83, 97, 0.5);
 }
-.btnXoa:disabled, .btnXoa.disabled {
-    opacity: 0.65;
+.btnXoa:disabled,
+.btnXoa.disabled {
+  opacity: 0.65;
 }
 .modal {
-    z-index: 1050; 
+  z-index: 1050;
 }
-#deleteUserModal  {
-    z-index: 1060; 
+#deleteUserModal {
+  z-index: 1060;
 }
 .modal-content {
-    animation: slide-down 0.3s ease-out; 
+  animation: slide-down 0.3s ease-out;
 }
 @keyframes slide-down {
-    from {
-        transform: translateY(-20px);
-        opacity: 0;
-    }
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
+  from {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
-.form-group{
-    padding:0 15px;
+.form-group {
+  padding: 0 15px;
 }
 #userInfo {
-    padding: 20px;
-    background-color: #fff; 
-    border-radius: 5px; 
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
 }
 .info-row {
-    display: flex; 
-    margin-bottom: 10px; 
+  display: flex;
+  margin-bottom: 10px;
 }
-.info-row  b {
-    flex: 0 0 150px; 
-    text-align: left; 
+.info-row b {
+  flex: 0 0 150px;
+  text-align: left;
 }
-span{
-    margin: 0 10px ;
+span {
+  margin: 0 10px;
 }
 .sidebar {
-    height: 100vh; 
-    position: fixed; 
-    top: 0;
-    left: 0;
-    width: 250px; 
-    background-color: #007bff; 
-    color: #ffffff; 
-    padding: 20px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-    border-radius: 5px; 
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 250px;
+  background-color: #007bff;
+  color: #ffffff;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
 }
 
 .sidebar h3 {
-    margin-bottom: 20px; 
-    font-size: 24px; 
-    text-align: center; 
-    color: #ffffff; 
-    
+  margin-bottom: 20px;
+  font-size: 24px;
+  text-align: center;
+  color: #ffffff;
 }
 
 .nav {
-    list-style-type: none; 
-    padding: 0; 
+  list-style-type: none;
+  padding: 0;
 }
 
 .nav-item {
-    margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
 
 .nav-link {
-    display: block; 
-    padding: 10px; 
-    color: #ffffff; 
-    text-decoration: none; 
-    border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s,font-weight 0.1s; 
+  display: block;
+  padding: 10px;
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s, font-weight 0.1s;
 }
 
 .nav-link:hover {
-    background-color: #0056b3; 
-    color: #ffffff; 
-    font-weight: bold; 
+  background-color: #0056b3;
+  color: #ffffff;
+  font-weight: bold;
 }
 
 .nav-link:focus {
-    outline: none; 
-    box-shadow: 0 0 5px rgba(255, 255, 255, 0.5); 
-    background-color: #0056b3; 
-    font-weight: bold; 
+  outline: none;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+  background-color: #0056b3;
+  font-weight: bold;
 }
+
