--- a/assets/css/user_index.css
+++ b/assets/css/user_index.css
@@ -4,7 +4,7 @@
     z-index: 1000; 
 }
 .footer {
-    position: fixed; 
+    /* position: fixed;  */
     bottom: 0;
     width: 100%; 
     background-color: #f8f9fa; 
